tests/baselines/reference/symbolProperty55.errors.txt
symbolProperty55.ts(5,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== symbolProperty55.ts (1 errors) ====
    var obj = {
        [Symbol.iterator]: 0
    };
    
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        var Symbol: SymbolConstructor;
        // The following should be of type 'any'. This is because even though obj has a property keyed by Symbol.iterator,
        // the key passed in here is the *wrong* Symbol.iterator. It is not the iterator property of the global Symbol.
        obj[Symbol.iterator];
    }